# build-everything-with-c

./: .clang-format  .gitignore  README.md
cker/: Makefile
cker/src/: container_main.c  container_ns.c  container_rootfs.c  container_utils.c
cker/src/inc/: container_config.h  container_ns.h  container_rootfs.h  container_utils.h
demo/: .gitignore
demo/linuxC++/asynchronous/: simple_async_mechanism.cpp
demo/linuxC++/cache-eviction-policy/: fifo-e.cpp  fifo.cpp  lfu.cpp  lru.cpp  rp.cpp  slru.cpp
demo/linuxC++/concurrency/: lockedqueue.cpp  simple_threadpool.cpp
demo/linuxC++/concurrency/asynchronous/: simple_async_threadpool.cpp
demo/linuxC++/pool/threadpool/: thread_pool.h  thread_pool_test.cpp
demo/linuxC/file-io/: 00-start.c
demo/linuxC/multi-process/: 00-start.c  01-IPC-Semaphore.c  02-IPC-SharedMemory.c  03-IPC-SHM-SEM.c  04-IPC-MQ.c  05-IPC-PIPE.c
demo/linuxC/multi-thread/: 00-thread-start.c  01-sem.c  02-spin-lock.c  03a-thread-specific-data.c  03b-thread-local-storage.c  04-managing-thread-attribute.c  05-deadlock.c  06-performance-consideration.c
demo/linuxC/multi-thread/thread-pool-proj/: main.c  threadpool.c  threadpool.h
demo/linuxC/network-io/echo-server-proj/: epollClient.c  epollServer.c  pollServer.c  seleServer.c  selepollClient.c
demo/linuxC/network-io/tcp-poll/: client.c  server.c
demo/linuxC/network-io/tcp-raw/: client.c  server.c
demo/linuxC/network-io/tcp-select/: client.c  proto.h  server.c
demo/multi-process/: 01-Inter-Process-Communication-Semaphore.c  02-Inter-Process-Communication-ShareMemory.c
demo/multi-thread/: 02-spin-lock.c  05-deadlock.c  06-performance-consideration.c  managing-thread-attribute.c  thread-local-storage.c  thread-specific-data.c  thread-start.c
demo/multi-thread/thread-pool-proj/: main.c  threadpool.c  threadpool.h
demo/network-io/echo-server-proj/: epollServer.c  seleServer.c  selepollClient.c
demo/network-io/tcp-poll/: server.c
demo/network-io/tcp-raw/: client.c  server.c
demo/network/tcp-poll/: client.c
demo/network/tcp-raw/: proto.h
demo/network/tcp-select/: client.c  proto.h  server.c
empire/: .gitignore  CMakeLists.txt  Makefile  test.db
empire/include/: common.h  file.h  parse.h  srvpoll.h
empire/src/: file.c  main.c  parse.c
empire/src/cli/: main.c
empire/src/srv/: file.c  main.c  parse.c  srvpoll.c
tinykvweb/: .gitignore
tinykvweb/inc/: api_handler.h  engine.h  http_server.h  parser.h  storage.h
tinykvweb/src/: api_handler.c  engine.c  http_server.c  main.c  parser.c  storage.c
tinykvweb/test/: test_storage.c
tinykvweb/web/: app.js  index.html  style.css
